--- a/praca_inz/model/train.ipynb
+++ b/praca_inz/model/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        " 'comment_authors': []}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "(606, 477)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,19 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28\n",
-      "{'x': 28.528270545319657, 'y': 12.97576176416152, 'width': 47.85387317279425, 'height': 22.491320391213307, 'rotation': 0, 'rectanglelabels': ['Airplane']}\n",
-      "<class 'list'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "compose = transforms.Compose([\n",
     "    transforms.PILToTensor(),\n",
@@ -178,52 +168,41 @@
     "labels_list = []\n",
     "\n",
     "for path in os.listdir('./photos/train/'):\n",
-    "    img = Image.open(os.path.join('./photos/train/', '28.jpg'))\n",
+    "    img = Image.open(os.path.join('./photos/train/', path))\n",
     "    w, h = img.size\n",
     "\n",
     "    img = add_margin(img, (max_height - h)//2, (max_width - w)//2, math.ceil((max_height - h)/2), math.ceil((max_width - w)/2), (0,0,0))\n",
     "    tensors_image.append(compose(img))\n",
     "\n",
-    "    # id_ = int(path.split('.')[0])\n",
-    "    id_ = 28\n",
-    "    print(id_)\n",
+    "    id_ = int(path.split('.')[0])\n",
+    "    # id_ = 28\n",
+    "    # print(id_)\n",
     "    label = find_dict_by_id(labels, id_)\n",
     "    coordinates = label['annotations'][0]['result'][0]['value']\n",
-    "    print(coordinates)\n",
+    "    # print(coordinates)\n",
     "    boxes_list.append([coordinates['x'] + (max_width - w)//2, \n",
     "                        coordinates['y'] + (max_height - h)//2, \n",
     "                        coordinates['x'] + (max_width - w)//2 + coordinates['width'],\n",
     "                        coordinates['y'] + (max_height - h)//2 + coordinates['height']])\n",
     "    labels_list.append(1)\n",
     "\n",
-    "    img.show()\n",
-    "    break\n",
-    "print(type(boxes_list))"
+    "    # img.show()\n",
+    "    # break\n",
+    "# print(type(boxes_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_train_boxes = torch.tensor(boxes_list, dtype=torch.float)\n",
     "y_train_labels = torch.tensor(labels_list, dtype=torch.int64)\n",
     "\n",
     "y_train = {'boxes': y_train_boxes, 'labels': y_train_labels}\n",
     "x_train = tensors_image\n",
-    "type(y_train)\n",
+    "# type(y_train)\n",
     "# y_train.shape\n",
     "# iteruje po wszystkich sciezkach image.open(obraz) i potem compose(image) arr z tych tensowrow powstalych z compose\n",
     "# torch stack czy jakos tak"
@@ -231,16 +210,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\" to C:\\Users\\olcia/.cache\\torch\\hub\\checkpoints\\fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\n",
+      "100.0%\n"
+     ]
+    }
+   ],
    "source": [
     "model = faster_rcnn(weights=d.FasterRCNN_ResNet50_FPN_Weights.DEFAULT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,16 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([243.5283, 290.9758, 291.3821, 313.4671])"
+       "tensor([ 24.7658, 135.6987,  41.7767, 146.1655])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +283,7 @@
     "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "model = model.to(device)\n",
     "\n",
-    "# torch.DataLoader - zwraa w bachach zdjecia i bb \n",
+    "# torch.DataLoader - zwraca w bachach zdjecia i bb \n",
     "\n",
     "def train(model, optimiser, data, epochs=20):\n",
     "    loss_epoch_mean = []\n",
@@ -304,8 +292,13 @@
     "        for x, y in data:\n",
     "            x = x.to(device)\n",
     "            optimiser.zero_grad()\n",
-    "            y = [y]\n",
-    "            loss_dict = model(x, y)\n",
+    "            y_list = []\n",
+    "            a, _ = y['boxes'].shape\n",
+    "            for i in range(a):\n",
+    "                y_list.append({'boxes': y['boxes'][i].reshape(1, -1), 'labels': torch.tensor([1])})\n",
+    "\n",
+    "            print(y_list[0]['labels'].shape)\n",
+    "            loss_dict = model(x, y_list)\n",
     "            losses = sum(loss for loss in loss_dict.values())\n",
     "            losses.backward()\n",
     "            optimiser.step()\n",
@@ -317,25 +310,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'boxes': tensor([[243.5283, 290.9758, 291.3821, 313.4671]]), 'labels': tensor([1])}\n",
-      "{'boxes': tensor([[243.5283, 290.9758, 291.3821, 313.4671]]), 'labels': tensor([1])}\n"
+      "torch.Size([10])\n"
      ]
     }
    ],
    "source": [
-    "model, loss_epoch_mean = train(model, optimiser, dataLoader, 2)"
+    "model, loss_epoch_mean = train(model, optimiser, dataLoader, 20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
