--- a/praca_inz/model/train.ipynb
+++ b/praca_inz/model/train.ipynb
@@ -17,12 +17,13 @@
     "from torch.optim import Adam\n",
     "import numpy as np\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "import pickle"
+    "import pickle\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
        " 'comment_authors': []}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,7 @@
        "(606, 477)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,25 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading: \"https://download.pytorch.org/models/fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\" to C:\\Users\\olcia/.cache\\torch\\hub\\checkpoints\\fasterrcnn_resnet50_fpn_coco-258fb6c6.pth\n",
-      "100.0%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = faster_rcnn(weights=d.FasterRCNN_ResNet50_FPN_Weights.DEFAULT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +256,7 @@
        "tensor([ 24.7658, 135.6987,  41.7767, 146.1655])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +279,7 @@
     "\n",
     "def train(model, optimiser, data, epochs=20):\n",
     "    loss_epoch_mean = []\n",
-    "    for epoch in range(epochs):\n",
+    "    for epoch in tqdm(range(epochs)):\n",
     "        loss_list = np.array([])\n",
     "        for x, y in data:\n",
     "            x = x.to(device)\n",
@@ -310,14 +302,427 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46979b7d7066418490df7bea3998f2a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([10])\n"
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n",
+      "torch.Size([1])\n"
      ]
     }
    ],
@@ -327,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +741,7 @@
        "torchvision.models.detection.faster_rcnn.FasterRCNN"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,12 +752,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('model.p', 'wb') as f:\n",
     "  pickle.dump(model, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.6565965618938208,\n",
+       " 0.14479390531778336,\n",
+       " 0.13332822136580944,\n",
+       " 0.1452454872429371,\n",
+       " 0.14859014004468918,\n",
+       " 0.13826374113559722,\n",
+       " 0.1468367487192154,\n",
+       " 0.1520980603992939,\n",
+       " 0.1444410875439644,\n",
+       " 0.15388882271945475,\n",
+       " 0.15800354219973087,\n",
+       " 0.1590890884399414,\n",
+       " 0.16308448128402234,\n",
+       " 0.15292827785015106,\n",
+       " 0.16121636517345905,\n",
+       " 0.17089872248470783,\n",
+       " 0.17021486200392247,\n",
+       " 0.18862879537045957,\n",
+       " 0.16971260756254197,\n",
+       " 0.17604654841125011]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss_epoch_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from .utils import predict, load_model\n",
+    "MODEL = load_model('./model/model.p')"
    ]
   }
  ],
