delete all comments

--- a/praca_inz/model/train.ipynb
+++ b/praca_inz/model/train.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        " 'comment_authors': []}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "(223, 227)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        " 'labels': tensor([1])}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,16 +238,12 @@
     "\n",
     "y_train = {'boxes': y_train_boxes, 'labels': y_train_labels}\n",
     "x_train = tensors_image\n",
-    "y_train\n",
-    "# type(y_train)\n",
-    "# y_train.shape\n",
-    "# iteruje po wszystkich sciezkach image.open(obraz) i potem compose(image) arr z tych tensowrow powstalych z compose\n",
-    "# torch stack czy jakos tak"
+    "y_train"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +288,7 @@
        "tensor([ 70.2113,  45.2093, 126.1995, 120.5106])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,14 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda\n"
+      "cpu\n"
      ]
     }
    ],
@@ -319,8 +315,6 @@
     "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "print(device)\n",
     "model = model.to(device)\n",
-    "\n",
-    "# torch.DataLoader - zwraca w bachach zdjecia i bb \n",
     "\n",
     "def train(model, optimiser, data, epochs=20):\n",
     "    loss_epoch_mean = []\n",
@@ -346,13 +340,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14890c0754a84c7e8972dec413d4f615",
+       "model_id": "d91976d3884a407595875034b56da10d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -923,35 +917,6 @@
    "source": [
     "loss_epoch_mean"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "attempted relative import with no known parent package",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32md:\\HDD\\OLa_inz\\praca-inzynierska\\praca_inz\\model\\train.ipynb Cell 17\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/HDD/OLa_inz/praca-inzynierska/praca_inz/model/train.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m predict, load_model\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/HDD/OLa_inz/praca-inzynierska/praca_inz/model/train.ipynb#X22sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m MODEL \u001b[39m=\u001b[39m load_model(\u001b[39m'\u001b[39m\u001b[39m./model/model.p\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mImportError\u001b[0m: attempted relative import with no known parent package"
-     ]
-    }
-   ],
-   "source": [
-    "from .utils import predict, load_model\n",
-    "MODEL = load_model('./model/model.p')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -970,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
