--- a/praca_inz/model/train.ipynb
+++ b/praca_inz/model/train.ipynb
@@ -122,8 +122,8 @@
     "max_height = 0\n",
     "max_width = 0\n",
     "\n",
-    "for path in os.listdir('./photos/train/wybrane'):\n",
-    "    img = Image.open(os.path.join('./photos/train/wybrane', path))\n",
+    "for path in os.listdir('./photos/train'):\n",
+    "    img = Image.open(os.path.join('./photos/train', path))\n",
     "    w, h = img.size\n",
     "    print(w, h)\n",
     "    max_width = max(w, max_width)\n",
@@ -184,8 +184,8 @@
     "boxes_list = []\n",
     "labels_list = []\n",
     "from PIL import ImageDraw\n",
-    "for path in os.listdir('./photos/train/wybrane'):\n",
-    "    img = Image.open(os.path.join('./photos/train/wybrane', path))\n",
+    "for path in os.listdir('./photos/train'):\n",
+    "    img = Image.open(os.path.join('./photos/train', path))\n",
     "    w, h = img.size\n",
     "\n",
     "    img = add_margin(img, (max_height - h)//2, (max_width - w)//2, math.ceil((max_height - h)/2), math.ceil((max_width - w)/2), (0,0,0))\n",
