--- a/praca_inz/model/train.ipynb
+++ b/praca_inz/model/train.ipynb
@@ -204,14 +204,14 @@
     "    labels_list.append(1)\n",
     "\n",
     "   \n",
-    "    draw = ImageDraw.Draw(img)\n",
-    "    draw.rectangle((coordinates['x'] + (max_width - w)//2, \n",
-    "                        coordinates['y'] + (max_height - h)//2, \n",
-    "                        coordinates['x'] + (max_width - w)//2 + coordinates['width'],\n",
-    "                        coordinates['y'] + (max_height - h)//2 + coordinates['height']), outline='red', width=2)\n",
-    "    print(boxes_list[0])\n",
-    "    img.show()\n",
-    "    break\n",
+    "    # draw = ImageDraw.Draw(img)\n",
+    "    # draw.rectangle((coordinates['x'] + (max_width - w)//2, \n",
+    "    #                     coordinates['y'] + (max_height - h)//2, \n",
+    "    #                     coordinates['x'] + (max_width - w)//2 + coordinates['width'],\n",
+    "    #                     coordinates['y'] + (max_height - h)//2 + coordinates['height']), outline='red', width=2)\n",
+    "    # print(boxes_list[0])\n",
+    "    # img.show()\n",
+    "    # break\n",
     "# print(type(boxes_list))"
    ]
   },
